chore: add more case

--- a/website/docs/showcase/index.mdx
+++ b/website/docs/showcase/index.mdx
@@ -2,11 +2,19 @@
 
 以下的顺序按照[谁在使用？](https://github.com/sonofmagic/weapp-tailwindcss/issues/270)的小程序码或二维码提交时间顺序为基准
 
+<div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+
+<div>
+
 ## 区白白
 
 <img width={256} height={256} src="/img/showcase/0.qubaibai/qrcode.jpg" alt="区白白" />
 
 区白白是一个针对小区业主的小程序，它将不同的小区变成一个个的线上社区。业主可以在这个线上社区里参与小区事务，享受区白白的其他服务。
+
+</div>
+
+<div>
 
 ## MBTI 告诉你
 
@@ -14,11 +22,19 @@
 
 ChatGPT + 通义千问 + 360智脑驱动的 MBTI 测试小程序
 
+</div>
+
+<div>
+
 ## 今修
 
 <img width={256} height={256} src="/img/showcase/2.jinxiu/qrcode.jpg" alt="今修小程序" />
 
 南通本土手机维修业务小程序
+
+</div>
+
+<div>
 
 ## 聚贞顺
 
@@ -26,11 +42,19 @@ ChatGPT + 通义千问 + 360智脑驱动的 MBTI 测试小程序
 
 专业买卖二手自行车平台
 
+</div>
+
+<div>
+
 ## 安心校友圈
 
 <img width={256} height={256} src="/img/showcase/4.安心校友圈/qrcode.jpg" alt="安心校友圈" />
 
 大学生内部社交圈子
+
+</div>
+
+<div>
 
 ## 一键呼援
 
@@ -38,9 +62,23 @@ ChatGPT + 通义千问 + 360智脑驱动的 MBTI 测试小程序
 
 一键呼援的企业级方案
 
+</div>
+
+<div>
+
 ## 杭州数据交易所
 
 <img width={256} height={256} src="/img/showcase/6.杭州数据交易所/qrcode.jpg" alt="杭州数据交易所" />
 
+</div>
+
+<div>
+
+## 免费的MBTI性格测试工具
+
+<img width={256} height={256} src="/img/showcase/7.mbti/qrcode.jpg" alt="免费的MBTI性格测试工具" />
 
 
+</div>
+
+</div>
