chore(deps): upgrade

--- a/website/docs/quick-start/v2/index.mdx
+++ b/website/docs/quick-start/v2/index.mdx
@@ -24,6 +24,8 @@ process.env.TAILWIND_MODE = "watch"
 
 才能正常热更新
 
-https://github.com/icebreaker-trash/uni-app-vue2-tailwind-hbuilder-template
+模板源代码地址:
+
+https://github.com/icebreaker-template/uni-app-vue2-tailwind-hbuilder-template
 
 
