chore: #270 添加  悦骑行 小程序

--- a/website/docs/showcase/index.mdx
+++ b/website/docs/showcase/index.mdx
@@ -81,4 +81,16 @@ ChatGPT + 通义千问 + 360智脑驱动的 MBTI 测试小程序
 
 </div>
 
+<div>
+
+## 悦骑行
+
+<img width={256} height={256} src="/img/showcase/8.悦骑行/qrcode.jpeg" alt="悦骑行3.0" />
+
+公司：Guangzhou Jingji Zhiguang Technology Co. Ltd.
+
+介绍：悦骑行3.0版本重构中使用了 TailwindCSS，极大提升了效率和规范。
+
+</div>
+
 </div>
