docs: add uni-app-x tailwindcss3

--- a/website/docs/quick-start/v4/uni-app-x.mdx
+++ b/website/docs/quick-start/v4/uni-app-x.mdx
@@ -3,7 +3,13 @@ import UniAppHbuilderShared from './UniAppHbuilderShared.mdx'
 # uni-app x
 
 :::warning
-暂时只支持 hbuilderx uni-app x 跨 h5 和小程序平台，原生安卓和IOS平台正在开发中，暂不支持
+tailwindcss@4 版本，暂时只支持 hbuilderx uni-app x 跨 `h5` 和 `小程序` 平台，
+
+原生安卓和IOS平台无法支持，因为 uni-app x 目前对 css 各种现代语法的兼容较差，兼容不了 tailwindcss@4 生成的样式
+
+未来此功能的适配，取决于 uni-app x 团队对现代 css 的兼容程度
+
+(2025-07-27)
 :::
 
 <UniAppHbuilderShared isX />
