docs: add uni-app x

--- a/website/docs/quick-start/frameworks/uni-app-x.mdx
+++ b/website/docs/quick-start/frameworks/uni-app-x.mdx
@@ -65,7 +65,7 @@ const { r } = require('./shared')
 module.exports = {
   content: [
     r('./pages/**/*.{uts,uvue}'),
-    // r('./components/**/*.{uts,uvue}') 
+    r('./components/**/*.{uts,uvue}') 
   ],
   corePlugins: {
     preflight: false,
