--- a/website/docs/uni-app-x/index.mdx
+++ b/website/docs/uni-app-x/index.mdx
@@ -30,10 +30,10 @@ import TailwindcssLogo from '../../../assets/logo.png'
 
 在使用 `Hbuilderx` 创建一个 `uni-app x` 项目后，可以遵循:
 
-1. [安装与配置 tailwindcss3](/docs/quick-start/install)
-2. [安装这个插件](/docs/quick-start/this-plugin)
-3. [uni-app-x 注册这个插件](/docs/quick-start/frameworks/uni-app-x)
-4. [rem 转 rpx (或 px)](/docs/quick-start/rem2rpx)
+### 1. [安装与配置 tailwindcss3](/docs/quick-start/install)
+### 2. [安装 weapp-tailwindcss](/docs/quick-start/this-plugin)
+### 3. [uni-app-x 注册 weapp-tailwindcss](/docs/quick-start/frameworks/uni-app-x)
+### 4. [rem 转 rpx (或 px)](/docs/quick-start/rem2rpx)
 
 这套的流程，集成 `tailwindcss` 原子化样式解决方案。
 
