--- a/website/docs/quick-start/frameworks/uni-app-x.mdx
+++ b/website/docs/quick-start/frameworks/uni-app-x.mdx
@@ -1,6 +1,6 @@
-# uni-app-x
+# 🔥 uni-app x
 
-目前 `weapp-tailwindcss` 从 `4.2.0` 版本开始，插件已经支持 `uni-app-x` 同时构建包括 `web`, `小程序`, `原生` 三端项目
+目前 `weapp-tailwindcss` 从 `4.2.0` 版本开始，插件已经支持 `uni-app-x` 同时构建包括 `web`,`小程序`, `安卓`,`IOS`,`鸿蒙` 五端项目
 
 ## 创建工具类
 
@@ -74,7 +74,8 @@ module.exports = {
 
 ```
 
-## 现成模板
+## 现成模板可以直接使用或者参考
 
 https://github.com/icebreaker-template/uni-app-x-hbuilderx
 
+使用方式详见项目中的 `README.md`
