--- a/website/docs/uni-app-x/index.mdx
+++ b/website/docs/uni-app-x/index.mdx
@@ -28,14 +28,16 @@ import TailwindcssLogo from '../../../assets/logo.png'
 
 ## 如何使用
 
-在使用 `Hbuilderx` 创建一个 `uni-app x` 项目后，可以遵循:
+### [🚀详见快速集成](/docs/uni-app-x/install)
+
+{/* 在使用 `Hbuilderx` 创建一个 `uni-app x` 项目后，可以遵循:
 
 ### 1. [安装与配置 tailwindcss3](/docs/quick-start/install)
 ### 2. [安装 weapp-tailwindcss](/docs/quick-start/this-plugin)
 ### 3. [uni-app-x 注册 weapp-tailwindcss](/docs/quick-start/frameworks/uni-app-x)
-### 4. [rem 转 rpx (或 px)](/docs/quick-start/rem2rpx)
+### 4. [rem 转 rpx (或 px)](/docs/quick-start/rem2rpx) */}
 
-这套的流程，集成 `tailwindcss` 原子化样式解决方案。
+{/* 这套的流程，集成 `tailwindcss` 原子化样式解决方案。 */}
 
 ## 如何开发
 
