chore: update Taro4.x import

--- a/website/docs/quick-start/install.mdx
+++ b/website/docs/quick-start/install.mdx
@@ -99,6 +99,18 @@ module.exports = {
 // @tailwind utilities;
 ```
 
+#### Taro 4.x
+
+环境：Taro 4.x、Sass 1.23+
+
+Taro 4.x 默认使用 `scss` 语法，因此 `app.scss` 文件如下:
+
+```scss title="app.scss"
+@use 'tailwindcss/base' as *;
+@use 'tailwindcss/components' as *;
+@use 'tailwindcss/utilities' as *;
+```
+
 然后在 `app.ts` 里引入这个样式文件即可。
 
 这样 `tailwindcss` 的安装与配置就完成了，接下来让我们进入第二个环节：安装 `weapp-tailwindcss`。
