docs: add use with taroify (#684)
* chore: update Taro4.x import

* chore: update README.md

* chore: add use with taroify

* Update use-with-taroify.md

---------

Co-authored-by: ice breaker <1324318532@qq.com>

--- a/website/docs/quick-start/install.mdx
+++ b/website/docs/quick-start/install.mdx
@@ -97,6 +97,11 @@ module.exports = {
 // @tailwind base;
 // @tailwind components;
 // @tailwind utilities;
+
+// sass 版本1.25+ 
+// @use 'tailwindcss/base';
+// @use 'tailwindcss/components';
+// @use 'tailwindcss/utilities';
 ```
 
 然后在 `app.ts` 里引入这个样式文件即可。
