--- a/website/docs/quick-start/install.mdx
+++ b/website/docs/quick-start/install.mdx
@@ -93,15 +93,15 @@ module.exports = {
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+// sass 版本1.25+ 使用 @use
+// @use 'tailwindcss/base';
+// @use 'tailwindcss/components';
+// @use 'tailwindcss/utilities';
+
 // 非 scss 的纯 css 文件，下列写法也是可以生效的
 // @tailwind base;
 // @tailwind components;
 // @tailwind utilities;
-
-// sass 版本1.25+ 
-// @use 'tailwindcss/base';
-// @use 'tailwindcss/components';
-// @use 'tailwindcss/utilities';
 ```
 
 然后在 `app.ts` 里引入这个样式文件即可。
