--- a/website/docs/quick-start/css-unit-transform.mdx
+++ b/website/docs/quick-start/css-unit-transform.mdx
@@ -1,3 +1,7 @@
+---
+toc_max_heading_level: 4
+---
+
 # CSS 单位转化
 
 ## rem 转 rpx (或 px)
@@ -8,17 +12,44 @@
 
 ## px 转 rpx
 
+### 4.3.0 以后
+
+从 `weapp-tailwindcss@4.3.0` 开始，我们内置了 [`postcss-pxtransform`](https://www.npmjs.com/package/postcss-pxtransform) 插件，提供了开箱即用的 `px` 转 `rpx` 的方式。
+
+只需传入配置项:
+
+```js
+// vite
+import { UnifiedViteWeappTailwindcssPlugin } from 'weapp-tailwindcss/vite'
+UnifiedViteWeappTailwindcssPlugin({
+  // ...other-options
+  px2rpx: true
+})
+// webpack
+const { UnifiedWebpackPluginV5 } = require('weapp-tailwindcss/webpack')
+new UnifiedWebpackPluginV5({
+  // ...other-options
+  px2rpx: true
+})
+```
+
+只需传入一个 `true`，你写的所有的 `px` 都会被 `1:1` 的转换成 `rpx`，比如 `10px` -> `10rpx`
+
+当然这个选项也可以传入一个 `object`, 这个默认值和参数，可以参考 [`postcss-pxtransform`](https://www.npmjs.com/package/postcss-pxtransform) 插件。
+
+### 4.3.0 以前
+
 这里我们使用 [`postcss-pxtransform`](https://www.npmjs.com/package/postcss-pxtransform) 这个 `postcss` 插件来做。
 
 > [`postcss-pxtransform`](https://www.npmjs.com/package/postcss-pxtransform) 由京东团队出品，应该是目前质量最高的 `px` 转 `rpx` 插件，而且已经被内置在了 `tarojs` 框架内
 
-### 安装插件
+#### 安装插件
 
 ```bash npm2yarn
 npm i -D postcss-pxtransform
 ```
 
-### 注册到 postcss 配置中
+#### 注册到 postcss 配置中
 
 ```js title="postcss.config.js"
 module.exports = {
