chore: bump version

--- a/website/docs/uni-app-x/index.mdx
+++ b/website/docs/uni-app-x/index.mdx
@@ -49,6 +49,10 @@ import run from './assets/run.png'
 
 <img className='h-60' src={run} alt="运行" />
 
+另外出于开发者体验的角度，推荐使用 `Vscode` 进行开发，`Hbuilderx` 去进行构建
+
+在 `Vscode` 上有 `Tailwindcss` 官方的插件做智能提示支持，整体的开发体验比 `Hbuilderx` 高一些。
+
 ### 优先使用安卓进行开发
 
 一般来说，`CSS` 平台的兼容程度，是 `Web` > `小程序` > `App`(安卓/IOS/鸿蒙)
