chore: bump version

--- a/website/blog/2025/9/v4.3-release.md
+++ b/website/blog/2025/9/v4.3-release.md
@@ -35,12 +35,43 @@ page,
 }
 .h-2 {
   height: 16rpx;
+  height: calc(var(--spacing) * 2);
 }
 ```
 
 这个模式可以解决很多手机机型 `calc` `rpx` 单位的兼容问题
 
 > 可通过给插件，传入 `cssCalc` 配置项 `false` 来手动关闭这个功能
+
+假如这时候你需要去除 CSS 变量的声明，你可以传入
+
+```js
+{
+  cssCalc: ['--spacing']
+}
+// 或者更精确的
+{
+  cssCalc: {
+    includeCustomProperties: ['--spacing']
+  }
+}
+```
+
+> 你也可以传入正则表达式
+
+这样生成的结果就是:
+
+```css
+page,
+:root {
+  --spacing: 8rpx;
+}
+.h-2 {
+  height: 16rpx;
+}
+```
+
+通过这种方式可以解决手机机型 `calc` `rpx` 单位的兼容问题
 
 详见: https://tw.icebreaker.top/docs/api/interfaces/UserDefinedOptions#csscalc
 
