--- a/website/docs/quick-start/install.mdx
+++ b/website/docs/quick-start/install.mdx
@@ -1,3 +1,5 @@
+import UniAppUniScss from './_UniAppUniScss.mdx'
+
 # 1. 安装与配置 tailwindcss
 
 > 请确保你的 `nodejs` 版本 `^18.17.0 || >=20.5.0`。目前低于 `18` 的长期维护版本(`偶数版本`) 都已经结束了生命周期，建议安装 `nodejs` 的 `LTS` 版本，详见 [nodejs/release](https://github.com/nodejs/release)。
@@ -83,6 +85,8 @@ module.exports = {
 /* @import 'tailwindcss/components'; */
 </style>
 ```
+
+<UniAppUniScss/>
 
 ### Taro
 
