--- a/website/docs/quick-start/v4/UniappCliStyle.mdx
+++ b/website/docs/quick-start/v4/UniappCliStyle.mdx
@@ -1,3 +1,5 @@
+import UniAppUniScss from '../_UniAppUniScss.mdx'
+
 单独创建一个 `main.css` 文件，并引入 `weapp-tailwindcss/css`。
 
 > 这是为了 `IDE` 智能提示, 目前 `Vscode` `tailwindcss` 插件不会扫描 `vue` 文件里引入的样式。
@@ -12,3 +14,5 @@
 ```html title="App.vue"
 <style src="./main.css"></style>
 ```
+
+<UniAppUniScss/>
