docs: fix mobile navbar

--- a/website/docs/uni-app-x/index.mdx
+++ b/website/docs/uni-app-x/index.mdx
@@ -21,7 +21,7 @@ import TailwindcssLogo from '../../../assets/logo.png'
 并借助 `uni-app x` 的能力，把 `tailwindcss` 原子化样式方案，同时带入到 `Web`, `小程序`, `安卓`,`IOS`, `鸿蒙` 五端。
 
 :::warning
-目前只支持 `tailwindcss@3.x`，不兼容 `tailwindcss@4.x` 去进行跨多段，  
+目前只支持 `tailwindcss@3.x`，不兼容 `tailwindcss@4.x` 去进行跨多端，  
 原因在于 `tailwindcss@4.x` 中生成的 `css` 过于先进，基本只有现代的 `web` 浏览器可以兼容，  
 而 `uni-app x` 暂时并没有兼容如此之多的 `css` 现代特性，所以 `tailwindcss@4.x` 目前在 `uni-app x` 中无法使用。
 :::
