--- a/website/blog/2025/8/v4.2-release.mdx
+++ b/website/blog/2025/8/v4.2-release.mdx
@@ -4,7 +4,9 @@ date: 2025-08-01
 authors: sonofmagic
 ---
 
-{/* truncate */}
+weapp-tailwindcss@4.2.x 现已适配 `uni-app x` 的多端构建能力，让 Tailwind CSS 原子类能够无缝跨端使用。本文梳理了从项目初始化到插件配置的完整流程，帮助你快速完成集成与发布。
+
+<!-- truncate -->
 
 # weapp-tailwindcss 已支持 uni-app x 多端构建
 
