--- a/website/blog/2025/9/v4.3-release.md
+++ b/website/blog/2025/9/v4.3-release.md
@@ -4,6 +4,8 @@ date: 2025-09-13
 authors: sonofmagic
 ---
 
+weapp-tailwindcss@4.3.0 默认开启 CSS 变量计算模式，并补充了更细粒度的 `cssCalc`、`px2rpx` 等配置，显著提升了多端 `rpx` 与 `calc` 的兼容性。本文带你了解这些变化的原理与使用方法。
+
 <!-- truncate -->
 
 # weapp-tailwindcss@4.3.0 🚀
