--- a/website/docs/quick-start/v4/uni-app-vite.mdx
+++ b/website/docs/quick-start/v4/uni-app-vite.mdx
@@ -18,26 +18,31 @@ import { defineConfig } from "vite";
 import uni from "@dcloudio/vite-plugin-uni";
 import { UnifiedViteWeappTailwindcssPlugin } from 'weapp-tailwindcss/vite'
 import tailwindcss from '@tailwindcss/postcss'
+import path from 'node:path'
 
 export default defineConfig({
   plugins: [
     uni(),
-    UnifiedViteWeappTailwindcssPlugin(
-      {
-        rem2rpx: true,
-      }
-    )
+    UnifiedViteWeappTailwindcssPlugin({
+      rem2rpx: true,
+      cssEntries: [
+        // 你 @import "weapp-tailwindcss"; 那个文件绝对路径
+        path.resolve(import.meta.dirname, './src/app.css'),
+      ],
+    }),
   ],
   css: {
     postcss: {
       plugins: [
-        tailwindcss()
-      ]
-    }
-  }
+        tailwindcss(),
+      ],
+    },
+  },
 });
 
 ```
+
+> tailwindcss@4 必须配置 `cssEntries` 并且使用绝对路径，否则 `tailwindcss` 生成的类名不会参与转译。
 
 ## 3. 添加样式
 
