--- a/website/docs/quick-start/v4/mpx.mdx
+++ b/website/docs/quick-start/v4/mpx.mdx
@@ -17,6 +17,7 @@ npm install -D tailwindcss @tailwindcss/postcss postcss weapp-tailwindcss
 ```js title="mpx.config.js"
 const { defineConfig } = require('@vue/cli-service')
 const { UnifiedWebpackPluginV5 } = require('weapp-tailwindcss/webpack')
+const path = require('node:path')
 module.exports = defineConfig({
   outputDir: `dist/${process.env.MPX_CURRENT_TARGET_MODE}`,
   pluginOptions: {
@@ -41,12 +42,18 @@ module.exports = defineConfig({
     config.plugins.push(
       new UnifiedWebpackPluginV5({
         rem2rpx: true,
+        cssEntries: [
+          // 你 @import "weapp-tailwindcss"; 那个文件绝对路径
+          path.resolve(__dirname, './src/app.css'),
+        ],
       })
     )
     // highlight-end
   }
 })
 ```
+
+> tailwindcss@4 必须配置 `cssEntries` 并且使用绝对路径，否则 `tailwindcss` 生成的类名不会参与转译。
 
 添加 `postcss.config.js` 注册 `@tailwindcss/postcss`
 
@@ -61,11 +68,17 @@ module.exports = {
 
 ## 添加样式
 
-在项目目录下，小程序全局的 `app.mpx` 中，添加以下内容：
+在 `src/app.css` 中引入 `weapp-tailwindcss`：
+
+```css title="src/app.css"
+@import "weapp-tailwindcss";
+```
+
+然后在项目目录下，小程序全局的 `app.mpx` 中，通过 `@import` 引入该文件：
 
 ```vue title="app.mpx"
-<style>
-@import "weapp-tailwindcss";
+<style lang="css">
+@import "./app.css";
 </style>
 ```
 
