--- a/website/docs/quick-start/frameworks/mpx.mdx
+++ b/website/docs/quick-start/frameworks/mpx.mdx
@@ -1,4 +1,8 @@
+import ExternalClassesReminder from '@site/fragments/ExternalClassesReminder.mdx'
+
 # mpx (原生增强)
+
+<ExternalClassesReminder framework="mpx" />
 
 在 `vue.config.js` 中注册：
 
