--- a/website/docs/quick-start/v4/weapp-vite.mdx
+++ b/website/docs/quick-start/v4/weapp-vite.mdx
@@ -1,6 +1,9 @@
 import Patch from './patch.mdx'
+import ExternalClassesReminder from '@site/fragments/ExternalClassesReminder.mdx'
 
 # Weapp-vite
+
+<ExternalClassesReminder framework="weapp-vite" />
 
 ## 安装
 
