--- a/website/docs/quick-start/frameworks/uni-app.mdx
+++ b/website/docs/quick-start/frameworks/uni-app.mdx
@@ -1,8 +1,12 @@
+import ExternalClassesReminder from '@site/fragments/ExternalClassesReminder.mdx'
+
 # uni-app cli vue2 webpack
 
 :::warning
 这是 `uni-app cli` 创建的项目的注册方式，如果你使用 `HbuilderX`，应该查看 [uni-app HbuilderX 使用方式](/docs/quick-start/frameworks/hbuilderx)
 :::
+
+<ExternalClassesReminder framework="uni-app" />
 
 :::tip
 截止到 (2023/09/08)，目前所有的 `uni-app vue2 cli` 项目的 `webpack` 版本，已经切换到了 `webpack@5`，`@vue/cli@5`，`postcss@8` 了
