--- a/website/docs/quick-start/v4/mpx.mdx
+++ b/website/docs/quick-start/v4/mpx.mdx
@@ -74,6 +74,8 @@ module.exports = {
 @import "weapp-tailwindcss";
 ```
 
+> 💡 如果你希望在任意样式文件中直接引用包内样式，请使用 `@import "weapp-tailwindcss/index.css";`。这样可以确保 `postcss-import` 解析到的是真实的 CSS 资源，避免出现 “Unknown word "use strict"” 这一类由于误解析到 JS 文件导致的构建报错。
+
 然后在项目目录下，小程序全局的 `app.mpx` 中，通过 `@import` 引入该文件：
 
 ```vue title="app.mpx"
