docs: fix warning

--- a/website/docs/migrations/v3.md
+++ b/website/docs/migrations/v3.md
@@ -18,7 +18,7 @@
 
 ## 重大变更
 
-1. 移除 [`jsAstTool`](/docs/api/interfaces/UserDefinedOptions#jsasttool) 的 `ast-grep` 支持，现在全部使用 `babel` 进行 `ast` 处理，假如你使用了这个配置，你可以保持不动，或者你可以把它删掉。
+1. 移除 `jsAstTool` 的 `ast-grep` 支持，现在全部使用 `babel` 进行 `ast` 处理，假如你使用了这个配置，你可以保持不动，或者你可以把它删掉。
 
 ## 特性更新
 
